--- a/fragments/dimensions.toml
+++ b/fragments/dimensions.toml
@@ -7,6 +7,7 @@ day-index = 'calendar'
 [origin]
 # where did the content come from?
 mnf-v1 = 'mnf'
+chnet = 'mnf-v1'
 twitter-cackhanded = 'twitter'
 twitter-norms_ps4 = 'twitter'
 youtube-gs = 'youtube'      # my 'Game Shows' channel
